--- a/socketio-client/socketio-client.html
+++ b/socketio-client/socketio-client.html
@@ -72,8 +72,8 @@
     <p>Connects to a web server using Socket.IO Client, can emit any event to and listens for all events coming from that server</p>
     <p>Input</p>
     <p><code>msg.eventName</code> contains the name of the event to emit to the SocketIO server</p>
-    <p><code>msg.payload</code> ontains the data to be sent along with the event</p>
+    <p><code>msg.payload</code> contains the data to be sent along with the event, if the paylod is an array, emit each element as a separate argument</p>
     <p>Output</p>
     <p><code>msg.eventName</code> contains the name of the event to emitted by the SocketIO server</p>
-    <p><code>msg.payload</code> ontains the data that was sent along with the event</p>
+    <p><code>msg.payload</code> contains the data that was sent along with the event as an array where each element corresponds to each argument sent</p>
   </script>
